--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1317,7 +1317,12 @@ section {
      .hero .image-container {
        width: 50%;
      }
-  
+
+    .hero img {
+          max-width: 100vw;
+          max-height: 100vh;
+    }
+
      .hero .text-container {
        width: 50%;
        background-color: #d7831e;
@@ -1366,11 +1371,6 @@ section {
         font-size: 30px;
         color: #fff;
       }
-  
-    .hero img {
-      max-width: 100%;
-      max-height: 100%;
-    }
 
 
 
